test/files/invalid/invalid_enum_variant.fbs
enum Foo: uint8 {
  X = "hello"
}