test/files/invalid/invalid_enum_variant.stderr
[0m[1m[38;5;9merror[0m[1m: expecting integer literal[0m
  [0m[34m┌─[0m test/files/invalid/invalid_enum_variant.fbs:2:7
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   X = [0m[31m"hello"[0m
  [0m[34m│[0m       [0m[31m^^^^^^^[0m

Error: Bailing because of errors
